Fix compile button being too small when zoomed in

--- a/src/css/nav.module.css
+++ b/src/css/nav.module.css
@@ -6,6 +6,7 @@ nav {
   color: #fff;
   align-items: center;
   height: 3em;
+  min-height: 3em;
   gap: 1em;
   max-width: 100%;
   overflow-x: auto;
